styles: fix PickerContainer z-index

--- a/client/src/TopicEditor/TimeChooser/styles.module.scss
+++ b/client/src/TopicEditor/TimeChooser/styles.module.scss
@@ -11,4 +11,5 @@
     position: relative;
     margin-left: 32px;
     margin-right: 24px;
+    z-index: 10;
 }
